[FIX] Update alert z-index value.

--- a/src/components/utils/alert/Alert.css
+++ b/src/components/utils/alert/Alert.css
@@ -15,6 +15,7 @@
     margin-bottom: 5px;
     background-color: #e5e5e5;
     box-shadow: 2px 2px 2px 0px darkgrey;
+    z-index: 999;
 }
 
 .alert-title-container {
